--- a/src/Tab/Tab.css
+++ b/src/Tab/Tab.css
@@ -18,12 +18,24 @@
   text-align: center;
   border-radius: 3px;
   margin-top: 10px;
+
+  transition: background-color 1s ease;
 }
 
 .clear-tab {
   padding: 8px;
   cursor: pointer;
   background-color: #CD5C5C;
+  color: white;
+  text-align: center;
+  border-radius: 3px;
+  margin-top: 10px;
+}
+
+.copy-tab {
+  padding: 8px;
+  cursor: pointer;
+  background-color: gray;
   color: white;
   text-align: center;
   border-radius: 3px;
