--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -15,41 +15,56 @@
     .modal-content {
         background: white;
         padding: 20px;
-        width: 300px;
+        min-width: 300px;
         border-radius: 5px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         text-align: center;
     }
 
     h2 {
-        margin-bottom: 10px;
+        margin-top: 5px;
     }
 
     p {
-        margin-bottom: 20px;
+        min-width: 60px;
+        margin: 0px;
+        padding: 5px;
+    }
+
+    label {
+        display: flex;
+        margin-bottom: 10px;
+    }
+
+    input {
+        width: 80%;
+        height: 10px;
+        padding: 8px;
+        margin: 0px;
     }
 
     .modal-buttons {
         display: flex;
         justify-content: center;
+        margin-top: 20px;
 
         button {
-        margin: 0 10px;
-        padding: 8px 16px;
-        cursor: pointer;
-        border: none;
-        border-radius: 4px;
-        font-size: 14px;
+            margin: 0 10px;
+            padding: 8px 16px;
+            cursor: pointer;
+            border: none;
+            border-radius: 4px;
+            font-size: 14px;
         }
 
         button:first-child {
-        background-color: #28a745; /* 확인 버튼 색상 */
-        color: white;
+            background-color: #4caf50; /* 확인 버튼 색상 */
+            color: white;
         }
 
         button:last-child {
-        background-color: #dc3545; /* 취소 버튼 색상 */
-        color: white;
+            background-color: #CD5C5C; /* 취소 버튼 색상 */
+            color: white;
         }
     }
 }
