--- a/src/Tab/Tab.css
+++ b/src/Tab/Tab.css
@@ -12,9 +12,8 @@
 }
 
 .tab {
-  padding: 8px;
-  margin-bottom: 5px;
   cursor: pointer;
+  border-bottom: 1px solid #ddd;
   transition: background-color 0.3s;
 }
   
