--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,20 @@ body {
 }
 
 .title-editor {
+  max-width: 400px;
+  min-width: 80px;
   height: 30px;
   font-size: 18px;
+  border: none;
+  padding: 5px;
+  margin: 10px;
+}
+
+.subtitle-editor {
+  max-width: 200px;
+  height: 20px;
+  font-size: 12px;
+  color: gray;
   border: none;
   padding: 5px;
 }
