--- a/src/Tab/Tab.css
+++ b/src/Tab/Tab.css
@@ -1,14 +1,15 @@
 .tabs-container {
   display: flex;
   flex-direction: column;
-  width: 200px;
+  width: 250px;
   height: calc(100vh - 141px);
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   border-right: 1px solid #ccc;
 }
 
 .tabs-scrollable {
   overflow-y: auto;
+  margin-bottom: 5px;
 }
 
 .tab {
@@ -29,8 +30,8 @@
 .add-tab,
 .clear-tab,
 .copy-tab {
-  margin-top: 10px;
-  padding: 8px;
+  margin-top: 4px;
+  padding: 6px;
   cursor: pointer;
   text-align: center;
   border-radius: 3px;
@@ -48,6 +49,32 @@
 
 .copy-tab {
   background-color: gray;
+  color: white;
+}
+
+.file-tab-container {
+  margin-top: auto;
+  display: flex;
+  margin-top: 4px;
+  cursor: pointer;
+  justify-content: space-between;
+}
+
+.import-tab,
+.export-tab {
+  width: calc(50% - 20px);
+  text-align: center;
+  padding: 6px;
+  border-radius: 3px;
+}
+
+.import-tab {
+  background-color: #ccc;
+  color: white;
+}
+
+.export-tab {
+  background-color: #ccc;
   color: white;
 }
 
